Fix CraftInventoryFurnace issues with fuel/smelt api