@@ -1,5 +1,7 @@
 package org.bukkit.craftbukkit.inventory;
 
+import net.minecraft.core.component.DataComponents;
+import net.minecraft.world.item.crafting.SingleRecipeInput;
 import net.minecraft.world.level.block.entity.AbstractFurnaceBlockEntity;
 import org.bukkit.block.Furnace;
 import org.bukkit.inventory.FurnaceInventory;
@@ -40,20 +42,20 @@ public class CraftInventoryFurnace extends CraftInventory implements FurnaceInve
         this.setItem(0, stack);
     }
 
-    // Paper start
     @Override
     public boolean isFuel(ItemStack stack) {
-        net.minecraft.server.level.ServerLevel world = ((org.bukkit.craftbukkit.CraftWorld) org.bukkit.Bukkit.getWorlds().get(0)).getHandle();
-        return stack != null && !stack.getType().isEmpty() && world.fuelValues().isFuel(CraftItemStack.asNMSCopy(stack));
+        return stack != null && !stack.isEmpty() && CraftItemStack.asNMSCopy(stack).has(DataComponents.COOKING_FUEL); // TODO - snapshot - replace with Paper DataComponents
     }
 
     @Override
     public boolean canSmelt(ItemStack stack) {
-        // data packs are always loaded in the main world
-        net.minecraft.server.level.ServerLevel world = ((org.bukkit.craftbukkit.CraftWorld) org.bukkit.Bukkit.getWorlds().get(0)).getHandle();
-        return stack != null && !stack.getType().isEmpty() && world.recipeAccess().getRecipeFor(((AbstractFurnaceBlockEntity) this.inventory).recipeType, new net.minecraft.world.item.crafting.SingleRecipeInput(CraftItemStack.asNMSCopy(stack)), world).isPresent();
+        if (stack == null || stack.isEmpty()) {
+            return false;
+        }
+        net.minecraft.server.level.ServerLevel world = ((org.bukkit.craftbukkit.CraftWorld) org.bukkit.Bukkit.getWorlds().getFirst()).getHandle();
+        SingleRecipeInput input = new SingleRecipeInput(CraftItemStack.asNMSCopy(stack));
+        return ((AbstractFurnaceBlockEntity) this.inventory).quickCheck.getRecipeFor(input, world).isPresent();
     }
-    // Paper end
 
     @Override
     public Furnace getHolder() {
